--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/stephanieg0/gifDaily-server#readme",
   "dependencies": {
-    "express": "^4.13.4"
+    "apicache": "0.0.12",
+    "express": "^4.13.4",
+    "request": "^2.69.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.1"
