--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "apicache": "0.0.12",
     "express": "^4.13.4",
     "pg": "4.5.1",
-    "request": "^2.69.0"
+    "pg-hstore": "^2.3.2",
+    "request": "^2.69.0",
+    "sequelize": "^3.19.3"
   },
   "devDependencies": {
     "nodemon": "^1.9.1"
