--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "4.5.1",
     "pg-hstore": "^2.3.2",
     "request": "^2.69.0",
-    "sequelize": "^3.19.3"
+    "sequelize": "^3.19.3",
+    "sequelize-cli": "^2.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.9.1"
