--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/stephanieg0/gifDaily-server#readme",
   "dependencies": {
     "apicache": "0.0.12",
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "pg": "4.5.1",
     "pg-hstore": "^2.3.2",
