--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "apicache": "0.0.12",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "passport": "^0.3.2",
     "pg": "4.5.1",
     "pg-hstore": "^2.3.2",
     "request": "^2.69.0",
