--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "apicache": "0.0.12",
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "passport": "^0.3.2",
