--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "4.5.1",
     "pg-hstore": "^2.3.2",
     "request": "^2.69.0",
