--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/stephanieg0/gifDaily-server#readme",
   "dependencies": {
     "apicache": "0.0.12",
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
     "express": "^4.13.4",
